# sd-zid

./: .editorconfig  .gitignore  README.md  sd-zid.code-workspace
doc/: PLD_Pins.docx  RPM-ProgIfc.md  Timing-BRK-MR_AD-SPRST_b.xml  Timing-BRK-MR_AD-SPRST_w.xml  Timing-BRK_IF_AE.xml  Timing-BRK_IF_AE_b.xml  Timing-BRK_IF_AE_w.xml  Timing-BRK_MR_Addr_wData.xml  Timing-IF-Memory.xml  Timing-IF-worst_best.xml  Timing-TGTGO_to_TGT-switch.xml  Timing-TGTGO_to_TGT-trigger.xml  Timing-TGTGO_to_TGT.xml  ZID-BlockDiag.odg  zid_main-ATF1508-Pins.docx
hw/ZID_BRK_EXP/: ZID_BRK_EXP.kicad_prl  ZID_BRK_EXP.kicad_pro  ZID_BRK_EXP.kicad_sch
hw/ZID_CPLD_TEST/: ZID_CPLD_TEST.kicad_prl  ZID_CPLD_TEST.kicad_pro  ZID_CPLD_TEST.kicad_sch
hw/ZID_EXP_BP/: ZID_EXP_BP.kicad_prl  ZID_EXP_BP.kicad_pro  ZID_EXP_BP.kicad_sch
hw/ZID_MAIN/: ZID_MAIN.kicad_pcb  ZID_MAIN.kicad_prl  ZID_MAIN.kicad_pro  ZID_MAIN.kicad_sch  conn_exp.kicad_sch  fp-info-cache  hold.kicad_sch  zid_main_logic.kicad_sch
hw/ZID_POD/: ZID_POD.kicad_pcb  ZID_POD.kicad_prl  ZID_POD.kicad_pro  ZID_POD.kicad_sch
hw/ZID_POD/Adapter/: Adapter-Body.stl  PLCC44-Probe-Adptr.stl  PLCC44_Adpt2.stl  PLCC44_Form1.stl  PLCC44_Form2.3mf  PLCC44_Form2.stl  newProject.elesat
hw/ZID_POD/Pod1/: ZID_POD.kicad_pcb  ZID_POD.kicad_prl  ZID_POD.kicad_pro  ZID_POD.kicad_sch
hw/ZID_POD/Pod2/: ZID_POD.kicad_pcb  ZID_POD.kicad_prl  ZID_POD.kicad_pro  ZID_POD.kicad_sch
hw/ZID_POD/Pod3/: ZID_POD.kicad_pcb  ZID_POD.kicad_prl  ZID_POD.kicad_sch
hw/ZID_POD/Pod4/: ZID_POD.kicad_pcb  ZID_POD.kicad_prl  ZID_POD.kicad_pro  ZID_POD.kicad_sch
hw/history/v0_1/: blinkenlights.kicad_sch  sd-zicd.kicad_prl  sd-zicd.kicad_pro  sd-zicd.kicad_sch  zicd_pwr-spare.kicad_sch
pld/: _temp.txt  dispkbd.pld  makefile  zid_ba.pld  zid_ba_pch.pld  zid_ba_pcl.pld  zid_bd_gpio.pld  zid_brk2n.pld  zid_brk2n_750.pld  zid_brk2x_ctrl.pld  zid_brkpcl.pld  zid_logic_ba.pld  zid_logic_pclsr.pld  zid_main.chn  zid_main.pld  zid_main.wcp  zid_main_wdm.pld  zid_main_wodm.pld
pld/test/: test_bp_0001.txt
src-rp/: CMakeLists.txt  board.c  doc-dt.code-workspace  main.c  memmap_2040_cstm.ld  memmap_2350_cstm.ld  multicore.c  pio_sm.c  system_defs.h  util.c
src-rp/_template/: CMakeLists.txt  xyz.c
src-rp/_template/include/: xyz.h
src-rp/app/: CMakeLists.txt  README.md  app.c  appops.c  appops.h
src-rp/app/include/: app.h  app_t.h
src-rp/calculator/: CMakeLists.txt  calc.c
src-rp/calculator/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/calculator/include/: calc.h
src-rp/cmt/: CMakeLists.txt  cmt.c  cmt_heap.c  cmt_heap.h
src-rp/cmt/include/: cmt.h  cmt_t.h
src-rp/dbusc/: CMakeLists.txt  dbusc.c  dbusc.pio
src-rp/dbusc/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/dbusc/include/: dbusc.h
src-rp/dc/: CMakeLists.txt  dc.c  dcmsg.c  dmcmdstat.h  z80reg.c
src-rp/dc/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/dc/include/: dc.h  dcmsg.h  z80reg.h
src-rp/debugging/: CMakeLists.txt  db_hardfault.c  debug_hw.c  debug_support.c
src-rp/debugging/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/debugging/include/: debug_support.h
src-rp/dskops/: CMakeLists.txt  dskops.c  dskops.h
src-rp/dskops/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/hwrt/: CMakeLists.txt  hwrt.c  hwrt.h
src-rp/hwrt/include/: hwrt_t.h
src-rp/include/: board.h  dbus.h  msgpost.h  multicore.h  pio_sm.h  util.h
src-rp/lib/: CMakeLists.txt
src-rp/lib/regex/: CMakeLists.txt
src-rp/lib/sd_card/: CMakeLists.txt
src-rp/lib/sd_card/ff15/: LICENSE.txt
src-rp/lib/sd_card/ff15/source/: ff.c  ff.h
src-rp/lib/sd_card/include/: my_debug.h  util.h
src-rp/lib/sd_card/sd_driver/: hw_config.c  sd_card.c  sd_card.h  sd_spi.c  spi.c  spi.h
src-rp/lib/sd_card/src/: f_util.c  ff_stdio.c  glue.c  my_debug.c  rtc.c
src-rp/lib/shell/: .gitignore  CMakeLists.txt  LICENSE  README.md
src-rp/lib/shell/src/: CMakeLists.txt  shell.c  shell_stub.c
src-rp/lib/shell/src/cmd/: CMakeLists.txt  cmd.c  cmd_i.h
src-rp/lib/shell/src/include/: cmd.h  cmd_t.h  shell.h  term.h
src-rp/lib/shell/src/term/: term.c
src-rp/lib/shell/test/: CMakeLists.txt  shell_test.c  util.c  util.h
src-rp/number/: CMakeLists.txt  nbase.c  num.c
src-rp/number/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/number/include/: nbase.h  nbase_t.h  num.h  num_t.h
src-rp/picohlp/: CMakeLists.txt  picoutil.c  rtc_support.c  vrtc.c
src-rp/picohlp/cmd/: CMakeLists.txt  cmds.c  cmds.h
src-rp/picohlp/include/: picoutil.h  rppins.h  rtc_support.h
src-z/: makefile  src-z.code-workspace  version.inc  zid.img
src-z/cmn/: board.inc  makefile  stddef.inc
src-z/dbm/: dbmon.asm  dbmon.lnk  doccmds.inc  makefile  storage.asm  storage.inc
src-z/diag/: diag.asm  diag.inc  makefile
src-z/sbc/: makefile  sbc.lnk  sbc1.asm  storage.asm  storage.inc
src-z/test/: makefile  regions.asm  regions.lnk
src-z/util/: makefile  util.asm  util.inc
